# BattleShip

./: CMakeLists.txt  README.md  displayplayer.cpp  displayplayer.h  game.cpp  game.h  grid.cpp  grid.h  main.cpp  player.cpp  player.h  resources.qrc
